@@ -64,8 +64,8 @@ int is_Whitespace (char c);
 int is_Alphabetic (char c);
 char *trim (char *sourceStr);
 int explode (char *sourceStr, const char *delimiter, char ***tokenArray);
-void append_from_to_file (const char *source, const char *destination);
-void rename_or_copy (char *origen, char *desti);
+int append_from_to_file (const char *source, const char *destination);
+int rename_or_copy (char *origen, char *desti);
 unsigned long long getTimeFromStr (const char *time, const char *envvar, int rank);
 unsigned long long getFactorValue (const char *value, const char *ref, int rank);
 int mkdir_recursive (const char *path);
